--- a/force-app/main/default/classes/CaseTriggerHandler.cls
+++ b/force-app/main/default/classes/CaseTriggerHandler.cls
@@ -1,11 +1,11 @@
 public without sharing class CaseTriggerHandler {
 
     public static void beforeInsert(List<Case> newCaseList){
-        CaseTriggerHelper.asignacionCola(newCaseList);
+        //CaseTriggerHelper.asignacionCola(newCaseList);
     }
     
     public static void afterInsert(List<Case> newCaseList){
-        CaseTriggerHelper.validacionCorreoNuevo(newCaseList);
+        //CaseTriggerHelper.validacionCorreoNuevo(newCaseList);
     }
     
     public static void beforeUpdate(List<Case> newCaseList, Map<Id, Case> oldCaseMap){
