--- a/force-app/main/default/classes/JobValidacionRespuesta.cls
+++ b/force-app/main/default/classes/JobValidacionRespuesta.cls
@@ -1,4 +1,4 @@
-global class JobValidacionRespuesta implements Schedulable { 
+global without sharing class JobValidacionRespuesta implements Schedulable { 
     
     global void execute(SchedulableContext ctx) {
         recordatorioRespuesta();
